basic loading screen + update README + New front page template

--- a/assets/scss/foundation.scss
+++ b/assets/scss/foundation.scss
@@ -78,6 +78,7 @@
   My custom styles:
   Add your scss files below to structure your project styles
 */
+@import "custom/loader";
 
 // Modules
 @import "modules/navigation";
