Front v2.0 + Loader update

--- a/assets/scss/custom/_colors.scss
+++ b/assets/scss/custom/_colors.scss
@@ -37,3 +37,15 @@
 }
 
 $OWorange : #f99e1a;
+
+/*****************
+  Mixin border radius
+*****************/
+// Border radius shorthand
+@mixin border-radius($radius) {
+  border-radius: $radius;
+  -webkit-border-radius: $radius;
+  -moz-border-radius: $radius;
+  -ms-border-radius: $radius;
+  -o-border-radius: $radius;
+}
