--- a/assets/scss/modules/_footer.scss
+++ b/assets/scss/modules/_footer.scss
@@ -169,11 +169,11 @@ $hfooter : 60px;
 		display: none;
 	}
 	ul {
-		position:absolute;
-		margin:auto !important;
-		left: 0;
-		right: 0;
-		display: inline-block;
+		//position:absolute;
+		//margin:auto !important;
+		//left: 0;
+		//right: 0;
+		//display: inline-block;
 		line-height: $hfooter;
 		.menu-item {
 			vertical-align: middle;
