--- a/assets/scss/templates/_frontv2.scss
+++ b/assets/scss/templates/_frontv2.scss
@@ -69,15 +69,31 @@
 // This list everything for the hero listing
 	background:#313131;
 	padding-top: 75px;
+	padding-bottom: 100vh;
 	h3 {
 		text-transform: uppercase;
 	}
 }
 
 #home--list-blog {
+	margin:0 !important;
 	li {
 		list-style-type: none;
 		list-style-image: none;
+		&:nth-child(-n+3) {
+			margin-bottom: 20px;
+		}
+		&:nth-child(3),
+		&:nth-child(6) {
+			padding-right: 0px;
+		}
+		&:nth-child(1),
+		&:nth-child()
+		a {
+			display: block;
+			background:rgba($white,0.15);
+			padding: 20px;
+		}
 	}
 }
 #home--partie-2-buttons {
@@ -85,4 +101,10 @@
 }
 #twitch-wrap {
 	background-color: $Twitch;
+	padding:20px;
+	color:$white;
+}
+#twitch-stream {
+	min-width: 100%;
+	min-height: 200px;
 }
