--- a/assets/scss/templates/_single-hero.scss
+++ b/assets/scss/templates/_single-hero.scss
@@ -177,7 +177,8 @@ $scwidth  : 70px;
 	}
 	.value {
 		@include font-outline($white,$white,1px);
-		line-height: $scheight;
+		// warning : Ajustement à faire ?
+		line-height: $scheight - 5px;
 		text-align: center;
 		min-width: $scwidth;
 		position: relative;
@@ -327,6 +328,7 @@ $blueShield : #68ddff;
 	.blocks-wrapper {
 		position: relative;
 		left:100px;
+		min-width:100%;
 	}
 	.bubble {
 		opacity:0;
