Update FrontV2.0 + Animations

--- a/assets/scss/foundation.scss
+++ b/assets/scss/foundation.scss
@@ -10,6 +10,7 @@
 // Custom preload
 @import "custom/type";
 @import "custom/colors";
+@import "custom/custom-animation";
 
 //  Settings
 @import "global/settings"; // Foundation settings file.
