--- a/assets/scss/templates/_frontv2.scss
+++ b/assets/scss/templates/_frontv2.scss
@@ -19,6 +19,8 @@
 *****************/
 #listing-hero {
 // This list everything for the hero listing
+	// Test color
+	//background-color: green;
 	background-image: url('../images/home-background.jpg');
 	position: relative;
 	margin-top: -50px;
@@ -33,17 +35,53 @@
 .wrap--partie-1 {
 	padding-top: 50px;
 }
+.home--svg-stroke {
+	position:absolute;
+	width:100px;
+	height:100px;
+	top:-20px;left:-20px;
+	opacity:0;
+	z-index: -1; // Pour que mon stroke soit visible mais pas par-dessus
+	path {
+
+	}
+}
 .home--list-heroes {
-	li {
+	a {
+		position:relative;
 		display: inline-block;
 		width:60px;
-		height:50px;
+		height:60px;
 		background-color: rgba($white,0.75);
-		border: solid 3px $white;
+		box-shadow: 0px 0px 0px rgba($white,0.5);
+		border: solid 2px $white;
 		transform: skewX(-20deg);
 		@include border-radius(10px);
-		margin: 0 10px 0 0;
+		margin: 0 5px 0 0;
+		overflow: hidden;
+		transition: linear 0.4s;
+		img {
+			transform: skewX(20deg) scale(1.25);
+		}
+		svg {
+			transform: scale(0) skewX(20deg);
+			transition: linear 0.2s;
+		}
+		&:hover {
+			background-color: rgba($white,1);
+			box-shadow: 0px 0px 20px rgba($white,1);
+			svg {
+				transform:scale(2) skewX(20deg);
+			}
+		}
 	}
+}
+.home--svg-circle {
+	position: absolute;
+	width:60px;
+	height:60px;
+	left:0;
+	transform: skewX(20deg);
 }
 #home--recent-updates {
 	li {
@@ -53,6 +91,13 @@
 			min-height: 100px;
 		}
 	}
+}
+.home--list-wrapper {
+	display: inline-block;
+	max-width: 60px;
+	max-height: 60px;
+	position: relative;
+	z-index: 2; // Pour que mon stroke soit visible mais pas par-dessus
 }
 /*****************
   SEPARATOR (entre les 2 sections)
