--- a/assets/scss/templates/_single-hero.scss
+++ b/assets/scss/templates/_single-hero.scss
@@ -93,7 +93,7 @@ body {
 }
 
 .keybinding-image-wrapper {
-	background:red;
+	// background:red;
 	position: relative;
 	.keybinding-image {
 		position: absolute;
