Basic blog integration

--- a/assets/scss/templates/_frontv2.scss
+++ b/assets/scss/templates/_frontv2.scss
@@ -192,7 +192,7 @@ $recentTransition : ease-in-out 0.25s;
 				text-align: center;
 				// flex: 1;
 				align-self: center;
-				position: absolute;
+				// position: absolute;
 				width: 100%;
 			}
 		}
