--- a/assets/scss/foundation.scss
+++ b/assets/scss/foundation.scss
@@ -100,6 +100,7 @@
 @import "templates/page-sidebar-left";
 @import "templates/page-full-width";
 @import "templates/single-post";
+@import "templates/blog";
 
 // Custom
 @import "templates/single-hero";
