Front parallax update

--- a/assets/scss/templates/_frontv2.scss
+++ b/assets/scss/templates/_frontv2.scss
@@ -7,7 +7,8 @@
 	// padding-top: 60vh;
 	// width: 100vw;
 	height: 100vh;
-	background-attachment: fixed;
+	// background-image: url('../images/home-background.jpg');
+	// background-attachment: fixed;
 }
 #listing-hero,
 #home-second-part {
@@ -21,7 +22,6 @@
 // This list everything for the hero listing
 	// Test color
 	//background-color: green;
-	background-image: url('../images/home-background.jpg');
 	position: relative;
 	margin-top: -50px;
 	width: 100%;
