--- a/assets/scss/modules/_sidebar.scss
+++ b/assets/scss/modules/_sidebar.scss
@@ -1,10 +1,15 @@
 .sidebar {
-  @include breakpoint(small) {
-    @include grid-column(12);
-  }
+  // @include breakpoint(small) {
+  //   @include grid-column(12);
+  // }
 
-  @include breakpoint(medium) {
-    @include grid-column(4);
-    margin-top: 1rem;
-  }
+  // @include breakpoint(medium) {
+  //   @include grid-column(4);
+  //   margin-top: 1rem;
+  // }
+}
+
+// Quand la sidebar n'est pas sur la homepage
+.twitch-not-home {
+	margin: 100px 0 20px 0;
 }
