--- a/assets/scss/templates/_blog.scss
+++ b/assets/scss/templates/_blog.scss
@@ -1,4 +1,7 @@
 .page-template-blog {
+	.container {
+		top:0px;
+	}
 	background-color: $black;
 	p.row {
 		display: block;
@@ -9,17 +12,34 @@
 		opacity:0.5;
 	}
 }
-
+.blog--list-article {
+	position:relative;
+	h2#blog--title {
+		position:absolute;
+		transform: rotate(-90deg);
+		font-size: rem-calc(60);
+		opacity:0.5;
+		left:-200px;
+		top:220px;
+		margin:0 !important;
+		padding:0;
+		text-transform: uppercase;
+		text-align: right;
+	}
+}
 .blog--article-item {
 	width:100%;
 	margin-bottom: 20px;
 	&:nth-child(1) {
-		margin-top: 20px;
+		margin-top: 100px;
+	}
+	&:last-child {
+		margin-bottom: 200px;
 	}
 	a {
 		padding:20px;
 		display: block;
 		width: 100%;
-		background-color:rgba($white,0.25);
+		background-color:rgba($black,0.4);
 	}
 }
