--- a/assets/scss/templates/_page-full-width.scss
+++ b/assets/scss/templates/_page-full-width.scss
@@ -28,3 +28,8 @@
 	margin-top: 20px;
 	// max-width: 50%;
 }
+
+.page-template-page-full-width {
+	background-attachment: fixed;
+	background-size: cover;
+}
