Single posts, bug fix and such

--- a/assets/scss/templates/_page-full-width.scss
+++ b/assets/scss/templates/_page-full-width.scss
@@ -30,6 +30,8 @@
 }
 
 .page-template-page-full-width {
-	background-attachment: fixed;
-	background-size: cover;
+	.container {
+		top:0px;
+		padding-bottom:200px;
+	}
 }
